jitpack.io build fix